--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ jobs:
     steps:
 
       - run : echo "hello world! this is the build job" 
+      - run: echo "${CIRCLE_BRANCH}"
       - run:
           name: add environment variable
           command: |
