--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
       - run:
           name: "Setup custom environment variables"
           command: echo 'export MY_BRANCH="${CIRCLE_BRANCH}"' >> $BASH_ENV      
+      - run: echo "${MY_BRANCH}"    
       - run:
           name: add environment variable
           command: |
