--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
           command: echo 'export MY_BRANCH="${CIRCLE_BRANCH}"' >> $BASH_ENV      
       - run: echo "${MY_BRANCH}"    
       - run: echo "https://bitbucket.org/ed-app/ed/branches/compare/${CIRCLE_SHA1}%0D${TEST_VAR}#commits"
+      - run: echo "https://bitbucket.org/ed-app/ed/branches/compare/${CIRCLE_SHA1}${TEST_VAR}#commits"      
       - run:
           name: add environment variable
           command: |
