--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,8 +18,8 @@ jobs:
       - run:
           name: add environment variable
           command: |
-            BUILD_INFO= (curl -u "${MY_CIRCLE_TOKEN}": -X POST --header "Content-Type: application/json" -d '{"parameters": {"my_branch_name": "<< pipeline.git.branch >>", "my_param": "Hello"}}' https://circleci.com/api/v2/project/github/HennaAbbas/test_/pipeline )
-
+#            curl -u "${MY_CIRCLE_TOKEN}": -X POST --header "Content-Type: application/json" -d '{"parameters": {"my_branch_name": "<< pipeline.git.branch >>", "my_param": "Hello"}}' https://circleci.com/api/v2/project/github/HennaAbbas/test_/pipeline 
+            BUILD_INFO=$(curl -X POST -H "Circle-Token: ${CIRCLE_TOKEN}" -H "Content-Type: application/json" -d "{ \"parameters\": { \"my_branch_name\": \"update_circleci\" } }" "https://circleci.com/api/v2/project/github/HennaAbbas/test_/pipeline")
 
   test:
     docker:
